added css grid and text

--- a/exercises/exercise4/index.html
+++ b/exercises/exercise4/index.html
@@ -21,7 +21,14 @@
   </head>
 
   <body>
-    <!-- HTML would go here if needed. -->
+    <header>
+      <h1>Raise Your Left or Right Hand</h1>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+    </footer>
   </body>
 
 </html>
