--- a/exercises/exercise4v2/index.html
+++ b/exercises/exercise4v2/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-    <title>Change Your Mind</title>
+    <title>++ bubble popper ++</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -12,19 +12,23 @@
     <!-- Library script(s) -->
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/p5.sound.min.js"></script>
-
-    <script src="https://code.responsivevoice.org/responsivevoice.js?key=pQ1zY9Wx"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
 
 
     <!-- My script(s) -->
-    <script src="js/cocossd-objects.js"></script>
+    <script src="js/Ball.js"></script>
     <script src="js/script.js"></script>
   </head>
 
   <body>
-    <!-- HTML would go here if needed. -->
+    <header>
+      <h1>Raise Your Left or Right Hand</h1>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+    </footer>
   </body>
 
 </html>
