--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -4,22 +4,26 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-    <title>Change Your Mind</title>
+    <title>++++ They Live On +++++</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <!-- Library script(s) -->
+
+    <!-- p5.js -->
     <script src="js/libraries/p5.min.js"></script>
+
+    <!-- p5.sound -->
     <script src="js/libraries/p5.sound.min.js"></script>
 
-    <script src="https://code.responsivevoice.org/responsivevoice.js?key=pQ1zY9Wx"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
-    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
-
+    <!-- ml5.js -->
+    <script src="https://unpkg.com/ml5@0.6.0/dist/ml5.min.js" type="text/javascript"></script>
+    <!-- <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script> -->
 
     <!-- My script(s) -->
     <script src="js/cocossd-objects.js"></script>
+    <script src="js/Post.js"></script>
     <script src="js/script.js"></script>
   </head>
 
