--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -17,14 +17,19 @@
     <!-- p5.sound -->
     <script src="js/libraries/p5.sound.min.js"></script>
 
+    <!-- coccssd objects -->
+    <!-- <script src="js/cocossd-objects.js"></script> -->
+
     <!-- ml5.js -->
-    <script src="https://unpkg.com/ml5@0.6.0/dist/ml5.min.js" type="text/javascript"></script>
-    <!-- <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script> -->
+    <!-- <script src="https://unpkg.com/ml5@0.6.0/dist/ml5.min.js" type="text/javascript"></script> -->
+    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
 
     <!-- My script(s) -->
-    <script src="js/cocossd-objects.js"></script>
+    <script src="js/Flower.js"></script>
     <script src="js/Post.js"></script>
     <script src="js/script.js"></script>
+
+
   </head>
 
   <body>
