Project 1 final updates

--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-    <title>++++ They Live On +++++</title>
+    <title>++++ We Live +++++</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -30,7 +30,7 @@
   </head>
 
   <body>
-    
+
   </body>
 
 </html>
