starting exercise 5 haiku generator ++

--- a/examples/datepicker/index.html
+++ b/examples/datepicker/index.html
@@ -15,11 +15,15 @@
         <input id="color-picker" type="color" />
       </section>
       <section>
-        <!-- A date picker -->
+        <!-- A slider from 0-100 with a default of 0 -->
+        <input type="range" value="0" min="0" max="100">
+      </section>
+      <section>
 
-        <label for="name">Name:</label>
+        <label for="name">Word:</label>
         <input type="text" id="name" name="name" required minlength="4"
           maxlength="8" size="10"/>
+
       </section>
     </main>
 
