--- a/exercises/exercise5/index.html
+++ b/exercises/exercise5/index.html
@@ -10,7 +10,7 @@
       user-scalable="0"
     />
 
-    <title>Haiku Generator</title>
+    <title>Haiku Generator ++</title>
 
     <!-- adobe font -->
     <link rel="stylesheet" href="https://use.typekit.net/vzv6oqi.css">
@@ -25,6 +25,7 @@
   <body>
     <div id="app">
       <header>
+        <h1 id="title"><span id="span-1"> </span> <span id="span-2"></span> <span id="span-3"></span></h1>
       </header>
       <main>
         <section id="haiku">
