Exercise 6 Cleaning up folders and code

--- a/exercises/exercise6/index.html
+++ b/exercises/exercise6/index.html
@@ -25,7 +25,7 @@
 
   <body id="destroy">
     <section id="secret-doc">
-      <h2>Memo</h2>
+      <h1>Memo</h1>
       <table>
         <tr>
           <td><strong>To:</strong></td>
@@ -36,7 +36,7 @@
         </tr>
         <tr>
           <td><strong>From:</strong></td>
-          <td>Name</td>
+          <td><input type="text" value="Name" /></td>
         </tr>
         <tr>
           <td><strong>Date:</strong></td>
@@ -44,7 +44,7 @@
         </tr>
         <tr>
           <td><strong>Re:</strong></td>
-          <td>Subject</td>
+          <td><input type="text" value="Subject" /></td>
         </tr>
       </table>
       <hr />
@@ -81,8 +81,8 @@
         Some written business communication
         <span class="top-secret redacted">allows for a choice</span> between
         direct and indirect formats, but memorandums are
-        <span class="top-secret redacted">always direct</span>. The purpose is
-        clearly announced
+        <span class="top-secret redacted">always direct</span>. <span class="top-secret redacted">The purpose is
+        clearly announced</span>.
       </p>
       <p>
         Memos are a
