start of activity code taker

--- a/examples/datepicker/index.html
+++ b/examples/datepicker/index.html
@@ -31,27 +31,64 @@
         <input id="color-picker" type="color" />
       </section>
       <section>
+        <label for="cars">I am feeling:</label>
+        <select id="cars" name="cars">
+          <option value="abandoned">abandoned</option>
+          <option value="absent minded">absent minded</option>
+          <option value="abused">abused</option>
+          <option value="accomplished">accomplished</option>
+          <option value="accusatory">accusatory</option>
+          <option value="accused">accused</option>
+          <option value="admired">admired</option>
+          <option value="adored">adored</option>
+          <option value="adrift">adrift</option>
+          <option value="affectionate">affectionate</option>
+          <option value="afraid">afraid</option>
+          <option value="aggravated">aggravated</option>
+          <option value="aggressive">aggressive</option>
+          <option value="agitated">agitated</option>
+          <option value="alarmed">alarmed</option>
+          <option value="alert">alert</option>
+          <option value="alienated">alienated</option>
+          <option value="alive">alive</option>
+          <option value="alluring">alluring</option>
+          <option value="alone">alone</option>
+          <option value="aloof">aloof</option>
+          <option value="amazed">amazed</option>
+          <option value="ambushed">ambushed</option>
+          <option value="amused">amused</option>
+          <option value="angry">angry</option>
+          <option value="annoyed">annoyed</option>
+          <option value="antagonistic">antagonistic</option>
+          <option value="anxious">anxious</option>
+          <option value="apathetic">apathetic</option>
+          <option value="apologetic">apologetic</option>
+          <option value="appalled">appalled</option>
+          <option value="appreciated">appreciated</option>
+          <option value="appreciative">appreciative</option>
+          <option value="apprehensive">apprehensive</option>
+          <option value="aroused">aroused</option>
+          <option value="ashamed">ashamed</option>
+          <option value="astonished">astonished</option>
+          <option value="attacked">attacked</option>
+          <option value="attractive">attractive</option>
+          <option value="awake">awake</option>
+          <option value="aware">aware</option>
+          <option value="awe">awe</option>
+          <option value="awed">awed</option>
+          <option value="awestruck">awestruck</option>
+          <option value="awkward">awkward</option>
+        </select>
+      </section>
+      <section>
         <!-- A slider from 0-100 with a default of 0 -->
         <input type="range" value="0" min="0" max="100" />
       </section>
-      <section>
-        <label for="name">Mood:</label>
-        <input
-          type="text"
-          id="name"
-          name="name"
-          required
-          minlength="4"
-          maxlength="8"
-          size="10"
-        />
-      </section>
-      <section>
-
-        <div id="box">
-        </div>
-        <button id="btn2">not content</button>
-        <button id="btn1">content</button>
+      <section class="box">
+        <div id="line"></div>
+        <button id="btn1">yes</button>
+        <button id="btn2">maybe</button>
+        <button id="btn3">no</button>
       </section>
     </main>
 
