First draft of exercise 7

--- a/exercises/exercise7/index.html
+++ b/exercises/exercise7/index.html
@@ -10,7 +10,7 @@
       user-scalable="0"
     />
 
-    <title>Code Taker</title>
+    <title>Code Taker ++</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -20,6 +20,11 @@
       href="https://code.jquery.com/ui/1.12.1/themes/vader/jquery-ui.css"
       <!--
       Jquery--
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap"
+      rel="stylesheet"
     />
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -34,29 +39,36 @@
   </head>
 
   <body>
-    <!-- The poem, secret letters are in spans with class "secret" -->
-    <section id="poem">
-      <h2><span class="secret">T</span>his Is Just To Say</h2>
-      <p>
-        I <span class="secret">h</span>ave eaten<br />
-        the plums<br />
-        that wer<span class="secret">e</span> in<br />
-        the icebox
-      </p>
-      <p>
-        and which<br />
-        you we<span class="secret">r</span>e probably<br />
-        saving<br />
-        for br<span class="secret">e</span>akfast
-      </p>
-      <p>
-        Forgive <span class="secret">m</span>e<br />
-        they were del<span class="secret">i</span>cious<br />
-        so sweet<br />
-        a<span class="secret">n</span>d so cold
-      </p>
-      <h4>William Carlos Williams</h4>
+
+    <section class="postcard flip3D">
+      <div id="cardb" class="front">
+      <div class="text">
+        <h1>Hello</h1>
+        <p>
+          We have great new<span class="secret">s</span>! We just bought a condo in <span class="secret spaceleft">M</span>ontreal.
+          It has a spare room and a rooftop terrace with a great view.
+        </p>
+
+        <p>
+          When you visit we can ride our bikes from our place all the way to Le Vie<span class="secret">u</span>x Port, along the Lach<span class="secret">i</span>ne Canal!
+        </p>
+        <p>
+          <span class="secret">Y</span>ou are welcome to visit anytime. Hope everyone is well and keeping in go<span class="secret">o</span>d health. Think of you often . . .
+        </p>
+        <p class="xlarge">Best Wi<span class="secret">s</span>hes, J+J
+        </p>
+      </div>
+      <div class="address">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+    <div id="cardf" class="back">
+      <img src="assets/images/condo-lachine.jpg" alt="">
+    </div>
     </section>
+  </div>
 
     <!-- The secret answer area-->
     <section id="answer"></section>
