added toggle button

--- a/exercises/exercise7/index.html
+++ b/exercises/exercise7/index.html
@@ -40,7 +40,7 @@
 
   <body>
 
-    <section class="postcard flip3D">
+    <section class="postcard">
       <div id="cardb" class="front">
       <div class="text">
         <h1>Hello</h1>
@@ -64,9 +64,11 @@
         <span></span>
       </div>
     </div>
-    <div id="cardf" class="back">
+    <div id="cardf" class="back myimgdivtoggle">
       <img src="assets/images/condo-lachine.jpg" alt="">
     </div>
+
+      <button type="button" class="togglebtn">Toggle Image</button>
     </section>
   </div>
 
