fixed message alert formatting

--- a/exercises/exercise7/index.html
+++ b/exercises/exercise7/index.html
@@ -59,24 +59,23 @@
         </p>
       </div>
       <div class="address">
-        <span></span>
-        <span></span>
-        <span></span>
+        <button type="button" class="togglebtn"></button>
+        <span>Can You</span>
+        <span>Find the</span>
+        <span>Secret Message</span>
       </div>
     </div>
     <div id="cardf" class="back myimgdivtoggle">
       <img src="assets/images/condo-lachine.jpg" alt="">
     </div>
-
-      <button type="button" class="togglebtn">Toggle Image</button>
     </section>
   </div>
 
     <!-- The secret answer area-->
     <section id="answer"></section>
-    <div id="solved-dialog" title="Da Vinci?!">
+    <div id="solved-dialog" title="">
       <p>
-        You are soooooo smart!
+        Click on the stamp!
       </p>
     </div>
 
