--- a/exercises/exercise7/index.html
+++ b/exercises/exercise7/index.html
@@ -50,7 +50,7 @@
         </p>
 
         <p>
-          When you visit we can ride our bikes from our place all the way to Le Vie<span class="secret">u</span>x Port, along the Lach<span class="secret">i</span>ne Canal!
+          When you visit we can ride our bikes from our place all the way to Le Vie<span class="secret">u</span>x Port along the Lach<span class="secret">i</span>ne Canal!
         </p>
         <p>
           <span class="secret">Y</span>ou are welcome to visit anytime. Hope everyone is well and keeping in go<span class="secret">o</span>d health. Think of you often . . .
