--- a/exercises/exercise7/index.html
+++ b/exercises/exercise7/index.html
@@ -43,7 +43,7 @@
     <section class="postcard">
       <div id="cardb" class="front">
       <div class="text">
-        <h1>Hello</h1>
+        <h1>Hello,</h1>
         <p>
           We have great new<span class="secret">s</span>! We just bought a condo in <span class="secret spaceleft">M</span>ontreal.
           It has a spare room and a rooftop terrace with a great view.
