--- a/projects/project2/index.html
+++ b/projects/project2/index.html
@@ -16,19 +16,56 @@
     <section>
       <p>admired</p>
     </section>
+
     <section>
     </section>
+
     <section>
     </section>
+
     <section>
     </section>
+
     <section>
       <p>anxious</p>
     </section>
+
     <section>
       <p>awkward</p>
     </section>
+
     <section>
+    </section>
+
+    <section>
+    </section>
+
+    <section>
+
+    </section>
+
+    <section>
+    </section>
+
+    <section>
+      <p>fantastic</p>
+    </section>
+
+    <section>
+
+    </section>
+
+    <section>
+    </section>
+
+    <section>
+    </section>
+
+    <section>
+    </section>
+
+    <section>
+      <p>misinterpreted</p>
     </section>
 
     <!-- scripts -->
