Template 2: Calendar example

--- a/projects/project2/index.html
+++ b/projects/project2/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <section>
-      <p>admired</p>
+      <!-- <p>admired</p> -->
     </section>
 
     <section>
@@ -27,28 +27,17 @@
     </section>
 
     <section>
-      <p>anxious</p>
+      <!-- <p>anxious</p> -->
     </section>
 
     <section>
-      <p>awkward</p>
-    </section>
-
-    <section>
-    </section>
-
-    <section>
-    </section>
-
-    <section>
-
+      <!-- <p>awkward</p> -->
     </section>
 
     <section>
     </section>
 
     <section>
-      <p>fantastic</p>
     </section>
 
     <section>
@@ -59,13 +48,24 @@
     </section>
 
     <section>
+      <!-- <p>fantastic</p> -->
+    </section>
+
+    <section>
+
     </section>
 
     <section>
     </section>
 
     <section>
-      <p>misinterpreted</p>
+    </section>
+
+    <section>
+    </section>
+
+    <section>
+      <!-- <p>misinterpreted</p> -->
     </section>
 
     <!-- scripts -->
