adding prototype folder to project 2

--- a/examples/datepicker/index.html
+++ b/examples/datepicker/index.html
@@ -24,11 +24,11 @@
     <main class="datecolorpicker">
       <section>
         <!-- A date picker -->
-        <input id="date-picker" type="date" min="2021-03-28" />
+        <input id="date-picker" type="datetime-local" min="2021-03-28" />
       </section>
       <section>
         <!-- A color picker -->
-        <input id="color-picker" type="color" />
+        <input id="color-picker" type="color" value="#dddddd"/>
       </section>
       <section>
         <!-- <label for="moods"></label><br><br> -->
