variables working and new form set up

--- a/projects/project2/index.html
+++ b/projects/project2/index.html
@@ -35,9 +35,7 @@
     <!-- Library script(s) go here -->
   </head>
 
-  <body>
-    <section id="calendar">
-    </section>
+  <body id="calendar">
     <!-- <button type="button" id="formButton">Toggle Form!</button> -->
     <form id="input-form" title="" class="">
       <!-- A date picker -->
@@ -55,7 +53,7 @@
         <input type="radio" id="right" name="alignment" value="right" />
       </div>
 
-      <input id="width-picker" type="range" value="50" min="0" max="100" />
+      <input id="width-picker" type="range" value="60" min="20" max="120" />
       <input type="button" id="add" value="submit"></input>
     </form>
 
