final working version using jquery dialog submit button

--- a/projects/project2/form.html
+++ b/projects/project2/form.html
@@ -25,15 +25,15 @@ added javascript event handling on the form-->
   ></script>
 </head>
 <body id="calendar">
-  <div>
-  <button id="open-input-form">Open Dialog</button>
+  <div class="openclose">
+  <button id="open-input-form" class="openclose">Open Dialog</button>
 </div>
 <!-- GIVE THE FORM AN ID -->
 <div id = "gfg2" title="">
 <div id="input-form">
 <form id ="testForm">
   <input id="date-picker" type="datetime-local" name="date-picker" value="" required />
-  <input type="text" id="datepicker" name="datepicker2">
+  <!-- <input type="text" id="datepicker" name="datepicker2"> -->
   <input id="color-picker" type="color" value="#cccccc" name="color" />
   <select id="moods" name="feeling" value=""> </select>
   <div id="alignment-picker" class="radiobtns">
