updated default color

--- a/projects/project2/index.html
+++ b/projects/project2/index.html
@@ -44,7 +44,7 @@
       <input id="date-picker" type="datetime-local" value="" min="2021-03-28" required />
 
       <!-- A color picker -->
-      <input id="color-picker" type="color" value="#cccccc" required />
+      <input id="color-picker" type="color" value="#bbbbbb" required />
 
       <select id="moods" name="moods" value=""> </select>
 
