--- a/projects/project2/index.html
+++ b/projects/project2/index.html
@@ -59,6 +59,6 @@
   </main>
 
     <!-- scripts -->
-    <script src="js/workingnolocalstorage.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
