final version, cleaned up files and added readme

--- a/projects/project2/index.html
+++ b/projects/project2/index.html
@@ -2,13 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      width="device-width,"
-      initial-scale="1.0,"
-      maximum-scale="1.0,"
-      user-scalable="0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <title>Mood Calendar</title>
 
@@ -37,7 +31,6 @@
 
   <body>
     <button id="open-input-form" class="openclose">Open Form</button>
-    <button id="erase-data" class="">Erase History</button>
     <button id="imgdisplaybutton" class="">show/hide instructions</button>
 
     <main id="calendar">
@@ -81,10 +74,14 @@
         <li>Select your mood</li>
         <li>Align left, center, or right</li>
         <li>Slider determines width</li>
-        <li>Press submit</li>
+        <li>Press submit*</li>
       </ul>
-      <p>Return at another time and repeat process.</p>
-      <p><em>Note: You can move the buttons and form around the screen. If you would like to erase past data, click on 'Erase History' button and refresh the page.</em></p>
+      <p>Repeat daily or as you like.</p>
+      <p><em>*Note: You can drag buttons and form around or off the screen. Take note that the 'Erase History' button will clear the calendar on the next refresh. If you would like to keep past dates visible make sure to click the outside of the 'Erase History' button to move it.  </em></p>
+    </div>
+
+    <div class="xtraspace">
+      <button id="erase-data" class="">Erase History</button>
     </div>
     <!-- scripts -->
 
