updated instructions in index.html

--- a/projects/project2/index.html
+++ b/projects/project2/index.html
@@ -77,7 +77,7 @@
         <li>Press submit*</li>
       </ul>
       <p>Repeat daily or as you like.</p>
-      <p><em>*Note: You can drag buttons and form around or off the screen. Take note that the 'Erase History' button will clear the calendar on the next refresh. If you would like to keep past dates visible make sure to click the outside of the 'Erase History' button to move it.  </em></p>
+      <p><em>*Note: You can drag buttons and form around or off the screen. Take note that the 'Erase History' button will clear the calendar on the next refresh. If you would like to keep past dates visible make sure to click outside of the 'Erase History' button to move it.  </em></p>
     </div>
 
     <div class="xtraspace">
